--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <div class="titlemenu">
       <h2>Leve o amor para casa</h2>
       <a href="#AnimalsContent">Venha ver nossos bichinhos</a>
-      <img src="../Img/visao-dos-caes-removebg-preview.png" alt="">
+      <img src="Img/visao-dos-caes-removebg-preview.png" alt="">
     </div>
   </header>
 
