--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <a href="#About"><img src="https://img.freepik.com/vetores-gratis/desenhado-a-mao-loja-de-animal-de-estimacao-bonito_23-2147571361.jpg?w=826&t=st=1699277132~exp=1699277732~hmac=8682d4f8a940abc305ae6561d32045f8481f7ac321e3656518b62bbc4e6bb980" class="card-img-top" alt="..."></a>
+        <a href="#aboutUs"><img src="https://img.freepik.com/vetores-gratis/desenhado-a-mao-loja-de-animal-de-estimacao-bonito_23-2147571361.jpg?w=826&t=st=1699277132~exp=1699277732~hmac=8682d4f8a940abc305ae6561d32045f8481f7ac321e3656518b62bbc4e6bb980" class="card-img-top" alt="..."></a>
         <div class="card-body">
           <h5 class="card-title">Sobre nós</h5>
         </div>
