--- a/FormPage/FormPage.html
+++ b/FormPage/FormPage.html
@@ -4,31 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdoCão</title>
-    <link rel="stylesheet" href="formPage.css">
+    <link rel="stylesheet" href="./formRegistrarPage.css">
     <link rel="shortcut icon" href="https://img.freepik.com/vetores-gratis/um-modelo-de-adesivo-de-personagem-de-desenho-animado-de-cachorro_1308-75254.jpg?w=740&t=st=1699276934~exp=1699277534~hmac=bd0606629695c49a70fb9ce700d88d13a25dc6709fbde747e28c6b687dc9b02e" type="image/x-icon">
     <script src="FormPage.js" type="text/javascript"></script>
 </head>
 <body id="body">
     <div class="boxForm">
         <div class="imgContent" id="imgContainer">
-            <img src='' alt="" id="imgAnimal">
         </div>
         <div class="formContent">
-            <form action="../enviarForm.php" method="POST" id="formRegister">
+            <form action="registrar.php" method="POST" id="formRegister">
                 <div>
                     <div>
                         <label for="">Nome </label>
-                        <input type="text" id="nameInput" placeholder="Digie um nome" required>
+                        <input type="text" id="nameInput" placeholder="Digie um nome" required name="nome">
                         <p id="nameError">Digite um nome válido!</p>
                     </div>
                     <div>
                         <label for="">E-mail </label>
-                        <input type="email" id="emailInput" placeholder="Digite seu email" required>
+                        <input type="email" id="emailInput" placeholder="Digite seu email" required name="email">
                         <p id="emailError">Digite um email válido!</p>
                     </div>
                     <div>
                         <label for="">Senha </label>
-                        <input type="password" id="senhaInput" placeholder="mínimo 8 caracteres" required >
+                        <input type="password" id="senhaInput" placeholder="mínimo 8 caracteres" required name="senha">
                         <p id="senhaError">Digite uma senha válida!</p>
                     </div>
                     <div>
@@ -36,22 +35,24 @@
                         <input type="password" id="senhaRepetirInput" placeholder="repita sua senha" required>
                         <p id="senhaRepetirError">Digite uma senha válida!</p>
                     </div>
-                    <div class="dateContent">
-                        <label>Data de Nascimento</label>
-                        <div>
-                            <input type="date" id="dataInput">
-                            <p id="dataError">Digite uma data válida!</p>
-                        </div>
+                    <hr>
+                    <div class="linkRegister">
+                        <button class="googleLink">
+                            <img src="formImg/googleLogo.png" alt="">
+                            <p>Registrar com o google</p>
+                        </button>
+                        <button class="facebookLink">
+                            <img src="formImg/facebookLogo.png" alt="">
+                            <p>Registrar com o facebook</p>
+                        </button>
                     </div>
                 </div>
                 <div class="btnContent">
-                    <button id="botao" type="button" onclick="submitForm()">enviar</button>
+                    <button id="botao" type="submit" onclick="submitForm()">Registrar</button>
                 </div>
             </form>
             <hr>
-            <div class="linkContent">
-                <a href="login.html">Já tem uma conta? faça o login!</a>
-            </div>
+            <a href="login.html">Já tem uma conta? faça o login!</a>
         </div>
     </div>
 
@@ -64,24 +65,17 @@
             ['./formImg/sideImg4.jpg', '#F0B4D5', '#EFC9E1']
         ]
 
-        let colorList = [['#8ec5da'],['#D48651'], ['#F7E5BD'], ['#F0B4D5']
-
-    ]
-
         let randomNumber = Math.floor(Math.random() * imgList.length);
         let randomColor =  randomNumber;
-        let body = document.getElementById('body')
-        let botao = document.getElementById('botao')
 
-        document.getElementById("imgContainer").innerHTML = "<img src='" + imgList[randomNumber][0] + "'>"
+        document.getElementById("imgContainer").innerHTML = "<img id=img src='" + imgList[randomNumber][0] + "'>"
 
-        document.getElementById("body").style = "background='" + colorList[randomColor][0] + "'>"
-        
-        body.style.background =  colorList[randomColor][0];
-        botao.style.background =  colorList[randomColor][0];
-        botao.style.color = 'white';
+        document.documentElement.style.setProperty("--background-color", imgList[randomNumber][1])
+        document.documentElement.style.setProperty("--primary-color", imgList[randomNumber][2])
 
     })()
+
+    
     </script>
 </body>
 </html>
