Projeto com banco de dados

--- a/FormPage/FormLoginPage/login.html
+++ b/FormPage/FormLoginPage/login.html
@@ -29,11 +29,11 @@
                     </div>
                     <div class="linkRegister">
                         <button class="googleLink">
-                            <img src="formImg/googleLogo.png" alt="">
+                            <img src="../formImg/googleLogo.png" alt="">
                             <p>Registrar com o google</p>
                         </button>
                         <button class="facebookLink">
-                            <img src="formImg/facebookLogo.png" alt="">
+                            <img src="../formImg/facebookLogo.png" alt="">
                             <p>Registrar com o facebook</p>
                         </button>
                     </div>
@@ -44,17 +44,17 @@
             </form>
             <hr>
             <div class="linkContent">
-                <a href="FormPage.html">Não tem uma conta? Crie uma!</a>
+                <a href="../FormRegisterPage/FormPage.html">Não tem uma conta? Crie uma!</a>
             </div>
         </div>
     </div>
     <script>
     (function() {
     let imgList = [
-        ["./formImg/sideImg1.jpg", '#8ec5da', '#85C0D5'], 
-        ['./formImg/sideImg2.jpg', '#D48651', '#D69362'], 
-        ['./formImg/sideImg3.jpg', '#F7E5BD', '#F5E6CC'], 
-        ['./formImg/sideImg4.jpg', '#F0B4D5', '#EFC9E1']
+        ["../formImg/sideImg1.jpg", '#8ec5da', '#85C0D5'], 
+        ['../formImg/sideImg2.jpg', '#D48651', '#D69362'], 
+        ['../formImg/sideImg3.jpg', '#F7E5BD', '#F5E6CC'], 
+        ['../formImg/sideImg4.jpg', '#F0B4D5', '#EFC9E1']
     ]
 
     let randomNumber = Math.floor(Math.random() * imgList.length);
