--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               </ul>
             </li>
             <li class="nav-item formButton">
-              <a class="nav-link" href="./FormPage/FormPage.html">Cadastro</a>
+              <a class="nav-link" href="./FormPage/FormRegisterPage/FormPage.html">Cadastro</a>
             </li>
           </ul>
         </div>
