--- a/FormPage/FormLoginPage/Loginpage.html
+++ b/FormPage/FormLoginPage/Loginpage.html
@@ -5,41 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AdoCão</title>
-    <link rel="stylesheet" href="./formRegistrarPage.css">
+    <link rel="stylesheet" href="formPage.css">
     <link rel="shortcut icon"
         href="https://img.freepik.com/vetores-gratis/um-modelo-de-adesivo-de-personagem-de-desenho-animado-de-cachorro_1308-75254.jpg?w=740&t=st=1699276934~exp=1699277534~hmac=bd0606629695c49a70fb9ce700d88d13a25dc6709fbde747e28c6b687dc9b02e"
         type="image/x-icon">
-    <script src="FormPage.js" type="text/javascript"></script>
+    <script src="FormPage.js"></script>
+    <link rel="stylesheet" href="formLoginPage.css">
 </head>
 
-<body id="body">
+<body>
     <div class="boxForm">
         <div class="imgContent" id="imgContainer">
         </div>
         <div class="formContent">
-            <form action="../PHP/registrar.php" method="POST" id="formRegister">
+            <form action="../PHP/login.php" method="POST" id="formLogin">
+                <div>
+                    <h1>ADO<span>C</span>ÃO</h1>
+                </div>
                 <div>
                     <div>
-                        <label for="">Nome </label>
-                        <input type="text" id="nameInput" placeholder="Digie um nome" required name="nome">
+                        <input type="email" id="nameInput" placeholder="Digite o email" required>
                         <p id="nameError">Digite um nome válido!</p>
                     </div>
                     <div>
-                        <label for="">E-mail </label>
-                        <input type="email" id="emailInput" placeholder="Digite seu email" required name="email">
-                        <p id="emailError">Digite um email válido!</p>
-                    </div>
-                    <div>
-                        <label for="">Senha </label>
-                        <input type="password" id="senhaInput" placeholder="mínimo 8 caracteres" required name="senha">
+                        <input type="password" id="senhaInput" placeholder="Digite a senha" required>
                         <p id="senhaError">Digite uma senha válida!</p>
                     </div>
-                    <div>
-                        <label for="">Repita a senha </label>
-                        <input type="password" id="senhaRepetirInput" placeholder="repita sua senha" required>
-                        <p id="senhaRepetirError">Digite uma senha válida!</p>
-                    </div>
-                    <hr>
                     <div class="linkRegister">
                         <button class="googleLink">
                             <img src="../formImg/googleLogo.png" alt="">
@@ -52,14 +43,15 @@
                     </div>
                 </div>
                 <div class="btnContent">
-                    <button type="button" onclick="submitForm()">Registrar</button>
+                    <button type="button" onclick="submitForm()">Entrar</button>
                 </div>
             </form>
             <hr>
-            <a href="../FormLoginPage/Loginpage.html">Já tem uma conta? faça o login!</a>
+            <div class="linkContent">
+                <a href="../FormRegisterPage/FormPage.html">Não tem uma conta? Crie uma!</a>
+            </div>
         </div>
     </div>
-
     <script>
         (function () {
             let imgList = [
@@ -80,51 +72,36 @@
         })()
 
         function resetStyles() {
-            let nomeError = document.getElementById("nameError");
             let senhaError = document.getElementById("senhaError");
             let emailError = document.getElementById("emailError");
-            let senhaRepetirError = document.getElementById("senhaRepetirError");
 
-            nomeError.style.opacity = "0";
+
             senhaError.style.opacity = "0";
             emailError.style.opacity = "0";
-            senhaRepetirError.style.opacity = "0";
         }
 
 
         function submitForm() {
-            let formulario = document.getElementById("formRegister");
+            let formulario = document.getElementById("formLogin");
 
-            let nomeError = document.getElementById("nameError");
+
             let senhaError = document.getElementById("senhaError");
             let emailError = document.getElementById("emailError")
-            let senhaRepetirError = document.getElementById("senhaRepetirError");
 
-            let nomeInput = document.getElementById("nameInput");
             let senhaInput = document.getElementById("senhaInput");
             let emailInput = document.getElementById("emailInput");
-            let senhaRepetirInput = document.getElementById("senhaRepetirInput");
 
             resetStyles();
 
-            if (nomeInput.value.trim() == "") {
-                nomeError.style.opacity = "1"
-            }
             if (emailInput.value.trim() == "") {
                 emailError.style.opacity = "1"
             }
             if (senhaInput.value.trim() == "") {
                 senhaError.style.opacity = "1"
             }
-            if (senhaRepetirInput.value.trim() == "") {
-                senhaRepetirError.style.opacity = "1"
-            }
-            if (senhaInput.value.trim() !== senhaRepetirInput.value.trim()) {
-                senhaError.style.opacity = "1"
-                senhaRepetirError.style.opacity = "1"
-            }
 
-            if (!nomeInput.value.trim() == "" && !emailInput.value.trim() == "" && !senhaInput.value.trim() == "" && !senhaRepetirInput.value.trim() == "" && senhaInput.value.trim() === senhaRepetirInput.value.trim()) {
+
+            if (!emailInput.value.trim() == "" && !senhaInput.value.trim() == "") {
                 formulario.submit()
             }
 
