Adicionando sistema de cadastro e login

--- a/FormPage/FormLoginPage/Loginpage.html
+++ b/FormPage/FormLoginPage/Loginpage.html
@@ -24,11 +24,11 @@
                 </div>
                 <div>
                     <div>
-                        <input type="email" id="nameInput" placeholder="Digite o email" required>
-                        <p id="nameError">Digite um nome válido!</p>
+                        <input type="email" id="emailInput" placeholder="Digite o email" name="emailLogin" required>
+                        <p id="emailError">Digite um email válido!</p>
                     </div>
                     <div>
-                        <input type="password" id="senhaInput" placeholder="Digite a senha" required>
+                        <input type="password" id="senhaInput" placeholder="Digite a senha" name="senhaLogin" required>
                         <p id="senhaError">Digite uma senha válida!</p>
                     </div>
                     <div class="linkRegister">
@@ -47,9 +47,10 @@
                 </div>
             </form>
             <hr>
-            <div class="linkContent">
-                <a href="../FormRegisterPage/FormPage.html">Não tem uma conta? Crie uma!</a>
-            </div>
+            
+                <a href="../FormRegisterPage/FormPage.html">Não tem uma conta? Crie uma!<img class="icon" src="../formImg/icon-pata.png"></a>
+                <a href="../../index.php"><img class="icon" src="../formImg/seta2-icon.png"><p>Voltar para a página</p><img class="icon" src="../formImg/icon-pata.png"></a>
+         
         </div>
     </div>
     <script>
