Adicionamento de modal

--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
             <li class="nav-item formButton">
               <a class="nav-link" href="./FormPage/FormRegisterPage/FormPage.html">Cadastro</a>
             </li>
+            <li class="nav-item formButton">
+              <a class="nav-link" href="./FormPage/FormRegisterPage/FormPage.html">Faça o login</a>
+            </li>
           </ul>
         </div>
       </div>
