adicionando formulario para aditar dados

--- a/FormPage/FormLoginPage/Loginpage.html
+++ b/FormPage/FormLoginPage/Loginpage.html
@@ -49,7 +49,7 @@
             <hr>
             
                 <a href="../FormRegisterPage/FormPage.html">Não tem uma conta? Crie uma!<img class="icon" src="../formImg/icon-pata.png"></a>
-                <a href="../../index.php"><img class="icon" src="../formImg/seta2-icon.png"><p>Voltar para a página</p><img class="icon" src="../formImg/icon-pata.png"></a>
+                <a href="../../index.html"><img class="icon" src="../formImg/seta2-icon.png"><p>Voltar para a página</p><img class="icon" src="../formImg/icon-pata.png"></a>
          
         </div>
     </div>
