--- a/FormPage/FormRegisterPage/FormPage.html
+++ b/FormPage/FormRegisterPage/FormPage.html
@@ -58,7 +58,7 @@
             <hr>
             <a href="../FormLoginPage/Loginpage.html">Já tem uma conta? faça o login!<img class="icon" src="../formImg/icon-pata.png"></a>
             
-            <a href="../../index.php"> <img class="icon" src="../formImg/seta2-icon.png"> <p>Voltar para a página</p> <img class="icon" src="../formImg/icon-pata.png"></a>
+            <a href="../../index.html"> <img class="icon" src="../formImg/seta2-icon.png"> <p>Voltar para a página</p> <img class="icon" src="../formImg/icon-pata.png"></a>
         </div>
     </div>
 
