--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Ado<span>C</span>ão</a>
+        <a class="navbar-brand" href="#"><h1 class="logo">Ado<span>C</span>ão</h1></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -56,7 +56,7 @@
               <a class="nav-link" href="./FormPage/FormRegisterPage/FormPage.html">Cadastro</a>
             </li>
             <li class="nav-item formButton">
-              <a class="nav-link" href="./FormPage/FormRegisterPage/FormPage.html">Faça o login</a>
+              <a class="nav-link" href="./FormPage/FormLoginPage/Loginpage.html">Faça o login</a>
             </li>
           </ul>
         </div>
