--- a/FormPage/FormLoginPage/Loginpage.html
+++ b/FormPage/FormLoginPage/Loginpage.html
@@ -20,7 +20,7 @@
         <div class="formContent">
             <form action="../PHP/login.php" method="POST" id="formLogin">
                 <div>
-                    <h1>ADO<span>C</span>ÃO</h1>
+                    <img src="../../Img/slogan.png" alt="">
                 </div>
                 <div>
                     <div>
