--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="./Home/style.css">
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
@@ -23,51 +22,32 @@
 <!--CABEÇALHO-->
 
   <header>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#"><h1 class="logo">Ado<span>C</span>ão</h1></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#servicesContent">Serviços</a>
-            </li>
-            <li class="nav-item">
-              <a href="#aboutUs" class="nav-link">
-                Sobre nós
-              </a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Animais
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#AnimalsContent">Cachorros</a></li>
-                <li><a class="dropdown-item" href="#AnimalsContent">Gatos</a></li>
-                <li><a class="dropdown-item" href="#AnimalsContent">Pássaros</a></li>
-              </ul>
-            </li>
-            <li class="nav-item formButton">
-              <a class="nav-link" href="./FormPage/FormRegisterPage/FormPage.html">Cadastro</a>
-            </li>
-            <li class="nav-item formButton">
-              <a class="nav-link" href="./FormPage/FormLoginPage/Loginpage.html">Faça o login</a>
-            </li>
-          </ul>
+    <div class="container">
+      <nav>
+        <div class="logo"><img src="Img/logo.png" alt=""></div>
+        <div class="menu-toggle" id="mobile-menu">
+          <span></span>
+          <span></span>
+          <span></span>
         </div>
-      </div>
-    </nav>
+        <ul class="menu">
+          <li><a href="#servicesContent">Serviços</a></li>
+          <li><a href="#AnimalsContent">Animais</a></li>
+          <li><a href="#aboutUs">Sobre Nós</a></li>
+          <li><a href="../AdoCao/FormPage/FormLoginPage/Loginpage.html">Login</a></li>
+          <li><a href="../AdoCao/FormPage/FormRegisterPage/FormPage.html">Registrar</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div class="painel">
     <div class="titlemenu">
       <h2>Leve o amor para casa</h2>
       <a href="#AnimalsContent">Venha ver nossos bichinhos</a>
       <img src="Img/visao-dos-caes-removebg-preview.png" alt="">
     </div>
-  </header>
+  </div>
 
 <!--MENU DE BOLINHAS DO SITE-->
 
@@ -187,12 +167,25 @@
   </main>
   <footer>
     <div class="aboutUs" id="aboutUs">
-      <h1>SOBRE NÓS</h1>
       <div>
-        <p>Somos uma organização que facilita a ado<span>Ç</span>ão do seu pet, proporcionando uma experiência diferenciada para levar o amor para sua casa.</p>
+        <img src="Img/white-logo.svg" alt="">
       </div>
+      <div>
+        <p>Links</p>
+        <a href="">Login</a>
+        <a href="">Registre-se</a>
+        <a href="">Home</a>
+      </div>
+      <div>
+        <p>Equipe</p>
+        <span>Expedito</span>
+        <span>Carlos</span>
+        <span>Icaro</span>
+      </div>
+
     </div>
   </footer>
+  
+  <script src="HomePage.js"></script>
 </body>
-
 </html>
