--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <li><a href="#servicesContent">Serviços</a></li>
           <li><a href="#AnimalsContent">Animais</a></li>
           <li><a href="#aboutUs">Sobre Nós</a></li>
-          <li><a href="../AdoCao/FormPage/FormLoginPage/Loginpage.html">Login</a></li>
-          <li><a href="../AdoCao/FormPage/FormRegisterPage/FormPage.html">Registrar</a></li>
+          <li><a href="./FormPage/FormLoginPage/Loginpage.html">Login</a></li>
+          <li><a href="./FormPage/FormRegisterPage/FormPage.html">Registrar</a></li>
         </ul>
       </nav>
     </div>
